--- a/securedrop/static/css/journalist.css
+++ b/securedrop/static/css/journalist.css
@@ -431,6 +431,10 @@ p#codename {
 #cols li.source .submission-count span.unread {
   border: 0;
 }
+#cols li.source .submission-count span.label {
+  border: 0;
+  padding: 1px;
+}
 
 #replies .reply {
   border: 1px solid #999999;
@@ -497,6 +501,40 @@ p#no-replies {
 .submission .info {
   font-size: 12px;
   color: #666666;
+}
+
+.tag-label {
+  display: inline-block;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+  border: 1px solid #dedede;
+  padding: 3px;
+  margin-right: 1px;
+  font-size: 8pt;
+  background-color: #7683a9;
+  color: white;
+  text-decoration:none;
+}
+.tag-label:hover {
+  background-color: #99a4bf;
+}
+
+.untagged-tag-label {
+  display: inline-block;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+  border: 1px solid #dedede;
+  padding: 3px;
+  background: #f3f3f3;
+  background-color: #dbe4f1;
+  color: black;
+  margin-right: 1px;
+  font-size: 8pt;
+}
+.untagged-tag-label:hover{
+  background: #f3f3f3;
+  background-color: #7683a9;
+  color: white;
 }
 
 ul.plain {
